# SQLMiniDB

./: CMakeLists.txt  README.md
include/: ast.h  query_executor.h  query_optimizer.h  sql_parser.h  storage_manager.h  table.h  transaction_manager.h
src/: query_executor.cpp  query_optimizer.cpp  sql_parser.cpp  storage_manager.cpp  table.cpp  transaction_manager.cpp
tests/: test.cpp
